src/yini_test/cases/golden/lenient/valid/parser-mode/yini-marker-before-section.yini
@yini

^ App
name = "yini-marker-before-section"
mode = "lenient"
enabled = true
