src/yini_test/cases/golden/lenient/invalid/parser-mode/yini-marker-after-section.yini
^ App

@yini

name = "yini-marker-after-section"
mode = "lenient"
